[tool.poetry]
name = "tagreader"
version = "5.0.0"
description = "Tagreader is a Python package for reading trend data from the OSIsoft PI and Aspen Infoplus.21 IMS systems."
authors = ["Einar S. Idsø <eiids@equinor.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tagreader"}]
keywords=["Aspen InfoPlus.21", "OSIsoft PI"]
homepage = "https://github.com/equinor/tagreader-python"
repository = "https://github.com/equinor/tagreader-python"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=1"
pyodbc = "^4"
cryptography = "^41.0.3"
certifi = "^2023.7.22"
requests = "^2"
requests-kerberos = "^0"
notebook = { version = "^7.0.3", optional = true }
matplotlib = { version = "^3", optional = true }
diskcache = "^5.6.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3"
pytest = "^7"

[tool.poetry.extras]
notebooks = ["notebook", "matplotlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
