[tool.poetry]
name = "tagreader"
version = "6.0.4"
description = "Tagreader is a Python package for reading trend data from the OSIsoft PI and Aspen Infoplus.21 IMS systems."
authors = ["Einar S. Idsø <eiids@equinor.com>", "Morten Dæhli Aslesen <masl@equinor.com"]
license = "MIT"
readme = "README.md"
packages = [{include = "tagreader"}]
keywords=["Aspen InfoPlus.21", "OSIsoft PI"]
homepage = "https://github.com/equinor/tagreader-python"
repository = "https://github.com/equinor/tagreader-python"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9.2"
pandas = ">=1"
certifi = ">=2024.12.14,<2026.0.0"
requests = "^2.32.5"
requests-kerberos = "^0"
msal-bearer = "^1.3.3"
diskcache = "^5.6.1"
pycryptodome = "^3.20.0"
requests-ntlm = ">=1.1,<=2.0"
platformdirs = "^4.3.7"
urllib3 = "^2.5.0" # To avoid security issue https://www.cve.org/CVERecord?id=CVE-2025-50182

[tool.poetry.group.dev.dependencies]
pre-commit = "^3"
pytest = ">=7,<9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
